--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <br>
     <center><img src ="IaCh3.jpg"; width ="300 px"; height ="300">
     <br>
-    <p style ="color:black"; font size ="14 px"; font style ="arial"; align ="center">Aprenda sobre Realidad Virtual dando click <a href ="file:///C:/Users/HOME/Desktop/paginas%20web/realidad%20virtual.html">aqui</a>
-    <p style ="color:black"; font size ="14 px"; font style ="arial"; align ="center">Aprenda sobre Realidad Aumentada dando click <a href ="file:///C:/Users/HOME/Desktop/paginas%20web/realidad%20aumentada.html">aqui</a>
+    <p style ="color:black"; font size ="14 px"; font style ="arial"; align ="center">Aprenda sobre Realidad Virtual dando click <a href ="https://elkin649.github.io/davidrealidadvirtual.github.io/">aqui</a>
+    <p style ="color:black"; font size ="14 px"; font style ="arial"; align ="center">Aprenda sobre Realidad Aumentada dando click <a href ="https://elkin649.github.io/davidrealidadaumentada.github.io/">aqui</a>
     <br><iframe width="560" height="315" src="https://www.youtube.com/embed/fnlxj8qcy9A?si=E7_-e1DwyXf-Xg7-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
    </body>
 </html>
